[unstable] datamart through url (python side)